<resources>

    <string name="app_name">RihanApp2</string>
    <string name="IB_TUTOR">TUTOR</string>
    <string name="IB_USUARIO">USUARIO</string>
    <string name="tv_usuario">USUARIO</string>
    <string name="tv_tutor">TUTOR</string>

    <string name="tv_nombre_usuario">Nombre</string>
    <string name="tv_apellido_usuario">Apellido</string>
    <string name="tv_calle_usuario">Calle</string>
    <string name="tvn_numerocalle_usuario">Numero</string>
    <string name="email_usuario">Email</string>
    <string name="IB_BIEN">Email</string>

    <string name="TV_nombre2">nombre2</string>

    <string name="IB_BF">IB-BF</string>
    <string name="IB_T">IB-T</string>
    <string name="IB_A">IB-A</string>
    <string name="IB_BV">IB-BV</string>
    <string name="IB_B">IB_BANCO</string>
    <string name="IB_AJ">IB_AJ</string>
    <string name="Atras">Atras</string>
    <string name="CerrarSesio">CS</string>
    <string name="Saldo">Saldo</string>
    <string name="Quedeseahacer">¿Que desea hacer?</string>
    <string name="Quedeseaingresar">¿Que desea Ingresar?</string>
    <string name="Ing_Dinero">Ingresar Dinero</string>
    <string name="Pagar">Pagar</string>
    <string name="Monedas">Monedas</string>
    <string name="B_Monedas">B_Monedas</string>
    <string name="Billetes">Billetes</string>
    <string name="B_Billetes">B_Billetes</string>


    <string name="tvBilFisica">Billetera Fisica</string>
    <string name="tvBilVirtual">Billetera Virtual</string>
    <string name="tvTrasnporte">Trasporte</string>
    <string name="tvAjuste">Ajustes</string>
    <string name="tvAgenda">Agenda</string>
    <string name="tvCerrarSesion">Cerrar Sesion</string>


    <string name="Registrar">Registrar</string>
    <string name="Acceder">Acceder</string>
    <string name="RestaurarContraseña">Restaurar\nContraseña</string>
    <string name="Titulo">RIHAN</string>
    <string name="Contraseña">Contraseña</string>


    <string name="Sumar">Sumar</string>
    <string name="Restar">Restar</string>
    <string name="CantidadMonedas">Cantidad Monedas</string>
    <string name="CantidadBilletes">Cantidad Billetes</string>

    <string name="IV_M_10">M10</string>
    <string name="IV_M_5">M5</string>
    <string name="IV_M_2">M2</string>
    <string name="IV_M_1">M1</string>
    <string name="IV_M_50">M50</string>
    <string name="IV_M_25">M25</string>

    <string name="IV_B_1000">B1000</string>
    <string name="IV_B_500">B500</string>
    <string name="IV_B_200">B200</string>
    <string name="IV_B_100">B100</string>
    <string name="IV_B_50">B50</string>
    <string name="IV_B_20">B20</string>
    <string name="IV_B_10">B10</string>
    <string name="TituloBilletesCarga">Carga los Billetes</string>
    <string name="TituloMonedasCarga">Carga las Monedas</string>
    <string name="VerificacionBilletes">Verifica las cantidades </string>

    <string name="VerificacionMonedas">Verifica las cantidades</string>
    <string name="InicioSesionGoogle">Iniciar Sesion con Google</string>
    <string name="Perfil">Perfil</string>
    <string name="PerfilDatos">Tus Datos</string>
    <string name="Perfildatos2">Datos</string>
    <string name="PerfilDatosPersonales">Datos Personales</string>


    <string name="CrearBD">Crear Base de Datos</string>
    <string name="CargarBD">Cargar Base de Datos</string>
    <string name="BorrarBD">Borrar Base de Datos</string>
    <string name="ConsultarBD">Consultar Billetes y Monedas</string>
    <string name="Guardar">Guardar</string>
    <string name="NuevoRegistro">Nuevo Registro</string>
    <string name="txt_id">ID</string>


    <string name="BDbillete">Billete</string>
    <string name="BDMoneda">Moneda</string>
    <string name="BDID">ID</string>
    <string name="BDTipo">Tipo</string>
    <string name="BDValor">Valor</string>
    <string name="BDConslta">Consultar</string>

    <string name="BDBID1000">B1000</string>
    <string name="BDBID500">B500</string>
    <string name="BDBID200">B200</string>
    <string name="BDBID100">B100</string>
    <string name="BDBID50">B50</string>
    <string name="BDBID20">B20</string>
    <string name="BDBID10">B10</string>

    <string name="BDBV1000">1000</string>
    <string name="BDBV500">500</string>
    <string name="BDBV200">200</string>
    <string name="BDBV100">100</string>
    <string name="BDBV50">50</string>
    <string name="BDBV20">20</string>
    <string name="BDBV10">10</string>

    <string name="BDMID10">M10</string>
    <string name="BDMID5">M5</string>
    <string name="BDMID2">M2</string>
    <string name="BDMID1">M1</string>
    <string name="BDMID50">M50</string>
    <string name="BDMID25">M25</string>

    <string name="BDMV10">10</string>
    <string name="BDMV5">5</string>
    <string name="BDMV2">2</string>
    <string name="BDMV1">1</string>
    <string name="BDMV50">0.50</string>
    <string name="BDMV25">0.25</string>

    <string name="MontoPagar">Ingrese Monto a Pagar</string>
    <string name="MontoActual">Monto Actual de Billetera Fisica </string>


</resources>