<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CargaGlobalBM">

    <EditText
        android:id="@+id/et_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/BDTipo"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tv_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/BDValor"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textColorHighlight="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guardar" />
</LinearLayout>