<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_id"
            android:textColorHighlight="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/BDTipo"
            android:textColorHighlight="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_money"
            android:hint="@string/BDValor"
            android:textColorHighlight="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>