<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PerfilDatosUsuario">

    <TextView
        android:id="@+id/textView65"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView62"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="340dp"
        android:layout_height="20dp"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:text="@string/Contraseña"
        android:textColor="@color/black"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="359dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:paddingLeft="10sp"
        android:text="@string/PerfilDatos"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/PerfilDatosPersonales"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="340dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:text="@string/tv_nombre_usuario"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView57"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="340dp"
        android:layout_height="20dp"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:text="@string/email_usuario"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView59"
        app:layout_constraintTop_toBottomOf="@+id/textView59" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView58"
        app:layout_constraintTop_toBottomOf="@+id/textView58" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView58"
        app:layout_constraintTop_toBottomOf="@+id/textView58" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/Atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/atras" />

</androidx.constraintlayout.widget.ConstraintLayout>